tests/errors/preprocessor/_questions/incorrect/preproces_words_not_exist.c
#inc "dont_elif.c"

int main()
{
	return 0;
}
